Finalização do header

--- a/index.html
+++ b/index.html
@@ -9,56 +9,63 @@
       type="imagex/png"
       href="Assets/Imagens/logo-menu-md.webp"
     />
+    <link rel="stylesheet" href="Assets/CSS/style.css" />
   </head>
   <body>
-    <header class="flex">
-      <nav>
-        <img src="Assets/Imagens/logo-menu-md.webp" alt="Logo Flamengo" />
+    <div class="bg">
+      <header class="container">
+        <section class="row">
+          <!-- Header - Logo Flamengo -->
+          <img src="Assets/Imagens/logo-menu-md.webp" alt="Logo Flamengo" />
+          <!-- Header - Lista Titulos -->
 
-        <ul class="listaTitulos">
-          <li>
-            <h5>1x</h5>
-            <img
-              src="Assets/Imagens/mundial.png"
-              alt="Taça Mundial de Clubes"
-            />
-          </li>
-          <li>
-            <h5>3x</h5>
-            <img
-              src="Assets/Imagens/libertadores.png"
-              alt="Taça da Libertadores"
-            />
-          </li>
-          <li>
-            <h5>8x</h5>
-            <img
-              src="Assets/Imagens/brasileirao(2).png"
-              alt="Taça Brasileirao"
-            />
-          </li>
-          <li>
-            <h5>4x</h5>
-            <img
-              src="Assets/Imagens/copaDoBrasil2.png"
-              alt="Taça Copa do Brasil"
-            />
-          </li>
-          <li>
-            <h5>1x</h5>
-            <img
-              src="Assets/Imagens/recopaSulAmericana.png"
-              alt="Taça Recopa Sul Americana"
-            />
-          </li>
-        </ul>
-        <ul>
-          <li><a href="elenco.html">Elenco</a></li>
-          <li><a href="titulos.html">Títulos</a></li>
-          <li><a href="campeonatos.html">Campeonatos</a></li>
-          <li><a href="cantosTorcida.html">Cantos Torcida</a></li>
-        </ul>
-      </nav>
-    </header>
+          <ul class="listaTitulos">
+            <li>
+              <h5>1x</h5>
+              <img
+                src="Assets/Imagens/mundial.png"
+                alt="Taça Mundial de Clubes"
+              />
+            </li>
+            <li>
+              <h5>3x</h5>
+              <img
+                src="Assets/Imagens/libertadores.png"
+                alt="Taça da Libertadores"
+              />
+            </li>
+            <li>
+              <h5>8x</h5>
+              <img
+                src="Assets/Imagens/brasileirao(2).png"
+                alt="Taça Brasileirao"
+              />
+            </li>
+            <li>
+              <h5>4x</h5>
+              <img
+                src="Assets/Imagens/copaDoBrasil2.png"
+                alt="Taça Copa do Brasil"
+              />
+            </li>
+            <li>
+              <h5>1x</h5>
+              <img
+                src="Assets/Imagens/recopaSulAmericana.png"
+                alt="Taça Recopa Sul Americana"
+              />
+            </li>
+          </ul>
+        </section>
+        <nav>
+          <ul>
+            <li><a href="elenco.html">Elenco</a></li>
+            <li><a href="titulos.html">Títulos</a></li>
+            <li><a href="campeonatos.html">Campeonatos</a></li>
+            <li><a href="cantosTorcida.html">Cantos Torcida</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
