Tentativa falha de colocar uma api para proximo jogo

--- a/index.html
+++ b/index.html
@@ -67,5 +67,12 @@
         </nav>
       </header>
     </div>
+    <main class="container">
+      <section class="column proximoJogo">
+        <h2>Próximo Jogo</h2>
+        <br />
+      </section>
+    </main>
+    <script src="Assets/JS/main.js"></script>
   </body>
 </html>
