Foi inserido a seção do campeonato brasileiro

--- a/index.html
+++ b/index.html
@@ -68,9 +68,249 @@
       </header>
     </div>
     <main class="container">
-      <section class="column proximoJogo">
-        <h2>Próximo Jogo</h2>
+      <section class="column sectionProximoJogo">
+        <h2 class="sectionTittle">Próximo Jogo</h2>
         <br />
+        <div class="row proximoJogo">
+          <div class="column times">
+            <img
+              src="Assets/Imagens/Logo Nova Iguaçu.png"
+              alt="Logo Nova Iguacu"
+            />
+            <span>Nova Iguaçu</span>
+          </div>
+
+          <span>X</span>
+          <div class="column times">
+            <img
+              src="Assets/Imagens/Logo_Flamengo_crest_1980-2018.png"
+              alt="Logo Flamengo"
+            />
+            <span>Flamengo</span>
+          </div>
+        </div>
+        <div class="column infoJogo">
+          <span>Campeonato Carioca</span>
+          <span>Final - Jogo 1</span>
+          <span>Sábado - 30/03</span>
+          <span>Maracanã</span>
+        </div>
+      </section>
+      <section class="column sectionTabelaCampeonatoBrasileiro">
+        <h2 class="sectionTittle">Campeonato Brasileiro</h2>
+        <br />
+        <div class="row tabelaCampeonatoBrasileiro">
+          <table>
+            <tr>
+              <th>#</th>
+              <th>Clube</th>
+              <th>Pts</th>
+              <th>V</th>
+              <th>E</th>
+              <th>D</th>
+              <th>SG</th>
+            </tr>
+            <tr>
+              <td class="posicaoLibertadores">1</td>
+              <td>Athletico Paranaense</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoLibertadores">2</td>
+              <td>Atlético-GO</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoLibertadores">3</td>
+              <td>Atlético Mineiro</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoLibertadores">4</td>
+              <td>Bahia</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoPreLibertadores">5</td>
+              <td>Botafogo</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoPreLibertadores">6</td>
+              <td>Corithians</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">7</td>
+              <td>Criciúma</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">8</td>
+              <td>Cruzeiro</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">9</td>
+              <td>Cuiabá</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">10</td>
+              <td>Flamengo</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </table>
+          <table>
+            <tr>
+              <th>#</th>
+              <th>Clube</th>
+              <th>Pts</th>
+              <th>V</th>
+              <th>E</th>
+              <th>D</th>
+              <th>SG</th>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">11</td>
+              <td>Fluminense</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoSulAmericana">12</td>
+              <td>Fortaleza</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>13</td>
+              <td>Grêmio</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>14</td>
+              <td>Inter</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>Juventude</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>16</td>
+              <td>Palmeiras</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoRebaixamento">17</td>
+              <td>Bragantino</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoRebaixamento">18</td>
+              <td>São Paulo</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoRebaixamento">19</td>
+              <td>Vasco</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td class="posicaoRebaixamento">20</td>
+              <td>Vitória</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </table>
+        </div>
+        <div class="legenda">
+          <ul>
+            <li class="libertadores">Libertadores</li>
+            <li class="preLibertadores">Pré-Libertadores</li>
+            <li class="sulAmericana">Sul-Americana</li>
+            <li class="rebaixamento">Rebaixamento</li>
+          </ul>
+        </div>
       </section>
     </main>
     <script src="Assets/JS/main.js"></script>
