Adição das imagens do footer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </tr>
             <tr>
               <td class="posicaoLibertadores">1</td>
-              <td>Athletico Paranaense</td>
+              <td>Athletico</td>
               <td>0</td>
               <td>0</td>
               <td>0</td>
@@ -130,7 +130,7 @@
             </tr>
             <tr>
               <td class="posicaoLibertadores">3</td>
-              <td>Atlético Mineiro</td>
+              <td>Atlético-MG</td>
               <td>0</td>
               <td>0</td>
               <td>0</td>
@@ -313,6 +313,87 @@
         </div>
       </section>
     </main>
+    <footer class="column footer">
+      <div class="redesSociais">
+        <h5>Redes Sociais:</h5>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="Assets/Imagens/logo-facebook.png" alt="Facebook"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="Assets/Imagens/logo-insta.png" alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="Assets/Imagens/logo-twitter.png" alt="Twitter"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <h5>Patrocinadores:</h5>
+      <div class="row patrocinadores">
+        <ul>
+          <li><img src="Assets/Imagens/pixbet.png" alt="Pixbet" /></li>
+          <li><img src="Assets/Imagens/adidas.png" alt="Adidas" /></li>
+          <li><img src="Assets/Imagens/banco brb.png" alt="Banco BRB" /></li>
+          <li><img src="Assets/Imagens/ML.png" alt="Mercado Livre" /></li>
+          <li>
+            <img src="Assets/Imagens/Assist Card.png" alt="Assist Card" />
+          </li>
+          <li><img src="Assets/Imagens/Kwai.png" alt="Kwai" /></li>
+          <li><img src="Assets/Imagens/Tim.png" alt="Tim" /></li>
+          <li><img src="Assets/Imagens/Socios.com" alt="Socios.com" /></li>
+          <li>
+            <img
+              src="Assets/Imagens/abcdaconstrucao.png"
+              alt="ABC da Construção"
+            />
+          </li>
+          <li><img src="Assets/Imagens/Eletrobras.png" alt="Eletrobras" /></li>
+          <li><img src="Assets/Imagens/RedeD'or.png" alt="Rede D'or" /></li>
+          <li><img src="Assets/Imagens/Estacio.png" alt="Estácio de Sá" /></li>
+          <li>
+            <img
+              src="Assets/Imagens/AguaAlcalina.png"
+              alt="Agua Alcalina Ecologica"
+            />
+          </li>
+          <li><img src="Assets/Imagens/avanutri.png" alt="Avanutri" /></li>
+          <li>
+            <img src="Assets/Imagens/cartaodetodos.png" alt="Cartão de Todos" />
+          </li>
+          <li><img src="Assets/Imagens/shell.png" alt="Shell" /></li>
+          <li><img src="Assets/Imagens/texaco.jpg" alt="Texaco" /></li>
+          <li><img src="Assets/Imagens/bayer.png" alt="Bayer" /></li>
+          <li><img src="Assets/Imagens/vale.png" alt="Vale" /></li>
+        </ul>
+      </div>
+      <h5>Parceiros:</h5>
+      <div class="row parceiros">
+        <ul>
+          <li><img src="Assets/Imagens/granado.png" alt="Granado" /></li>
+          <li><img src="Assets/Imagens/yapoli.png" alt="Yapoli" /></li>
+          <li><img src="Assets/Imagens/greenleaf.png" alt="Greenleaf" /></li>
+          <li><img src="Assets/Imagens/yorgus.png" alt="Yorgus" /></li>
+          <li><img src="Assets/Imagens/elite.png" alt="Elite" /></li>
+          <li><img src="Assets/Imagens/meddit.png" alt="Meddit" /></li>
+          <li><img src="Assets/Imagens/futurovipo.png" alt="Futuro Vipo" /></li>
+          <li><img src="Assets/Imagens/efootball.png" alt="E-Football" /></li>
+          <li><img src="Assets/Imagens/cocolegal.png" alt="Coco Legal" /></li>
+        </ul>
+      </div>
+      <h5>Apoio:</h5>
+      <div class="apoio">
+        <img
+          src="Assets/Imagens/ministeriodoesporte.png"
+          alt="Ministério do Esporte"
+        />
+      </div>
+    </footer>
     <script src="Assets/JS/main.js"></script>
   </body>
 </html>
