Foi iniciado a página de elenco e o consumo da API dos jogadores

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <header class="container">
         <section class="row">
           <!-- Header - Logo Flamengo -->
-          <img src="Assets/Imagens/logo-menu-md.webp" alt="Logo Flamengo" />
+          <a href="#">
+            <img src="Assets/Imagens/logo-menu-md.webp" alt="Logo Flamengo" />
+          </a>
           <!-- Header - Lista Titulos -->
 
           <ul class="listaTitulos">
@@ -65,7 +67,7 @@
         </section>
         <nav>
           <ul>
-            <li><a href="elenco.html">Elenco</a></li>
+            <li><a href="Assets/HTML/elenco.html">Elenco</a></li>
             <li><a href="titulos.html">Títulos</a></li>
             <li><a href="campeonatos.html">Campeonatos</a></li>
             <li><a href="cantosTorcida.html">Cantos Torcida</a></li>
@@ -411,6 +413,5 @@
         </div>
       </div>
     </footer>
-    <script src="Assets/JS/main.js"></script>
   </body>
 </html>
