Feito as funções em JS do consumo da API, junto com o CSS da lista de jogadores

--- a/Assets/HTML/elenco.html
+++ b/Assets/HTML/elenco.html
@@ -73,17 +73,46 @@
       <section class="column elenco">
         <h2 class="sectionTittle">Elenco</h2>
         <br />
+        <nav>
+          <ul>
+            <li>Goleiros</li>
+            <li>Zagueiros</li>
+            <li>Laterais Direitos</li>
+            <li>Laterais Esquerdos</li>
+            <li>Volantes</li>
+            <li>Meio Campo</li>
+            <li>Atacantes</li>
+          </ul>
+        </nav>
         <section class="column goleiros">
-          <h3>
-            Goleiros
-          </h3>
-          <div class="row " id="infoGoleiro">
-            
-          </div>
+          <h3 class="tituloPosicao">Goleiros</h3>
+          <div class="row listaJogadores" id="infoGoleiro"></div>
         </section>
-
-
-
+        <section class="column zagueiros">
+          <h3 class="tituloPosicao">Zagueiros</h3>
+          <div class="row listaJogadores" id="infoZagueiro"></div>
+        </section>
+        <section class="column lateriasDireitos">
+          <h3 class="tituloPosicao">Laterais Direito</h3>
+          <div class="row listaJogadores" id="infoLateralDireito"></div>
+        </section>
+        <section class="column lateraisEsquerdos">
+          <h3 class="tituloPosicao">Laterias Esquerdos</h3>
+          <div class="row listaJogadores" id="infoLateralEsquerdo"></div>
+        </section>
+        <section class="column volantes">
+          <h3 class="tituloPosicao">Volantes</h3>
+          <div class="row listaJogadores" id="infoVolante"></div>
+        </section>
+        <section class="column meias">
+          <h3 class="tituloPosicao">Meio-Campos</h3>
+          <div class="row listaJogadores" id="infoMeia"></div>
+        </section>
+        <section class="column atacantes">
+          <h3 class="tituloPosicao">Atacantes</h3>
+          <div class="row listaJogadores" id="infoAtacante"></div>
+        </section>
+      </section>
     </main>
 
     <footer class="bgFooter">
