Finalizado a página dos campeonatos

--- a/Assets/HTML/cantosTorcida.html
+++ b/Assets/HTML/cantosTorcida.html
@@ -9,7 +9,7 @@
       type="imagex/png"
       href="../Imagens/logo-menu-md.webp"
     />
-    <link rel="stylesheet" href="../CSS/styleElenco.css" />
+    <link rel="stylesheet" href="../CSS/cantosTorcida.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,65 +69,31 @@
       </header>
     </div>
     <main class="container">
-      <section class="column elenco">
-        <h2 class="sectionTittle">Elenco</h2>
+      <section class="column cantoTorcida">
+        <h2 class="sectionTittle">Oh Meu Mengão!</h2>
         <br />
-        <nav>
-          <ul class="row navegacaoEntreSecoes">
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Goleiros</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Zagueiros</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Laterais Direito</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Laterais Esquerdo</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Volantes</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Meios de Campo</a>
-            </li>
-            <li class="itemNavegacaoEntreSecoes">
-              <a href="">Atacantes</a>
-            </li>
-          </ul>
-        </nav>
-        <section class="column goleiros">
-          <h3 class="tituloPosicao">Goleiros</h3>
-          <div class="row listaJogadores" id="infoGoleiro"></div>
-        </section>
-        <section class="column zagueiros">
-          <h3 class="tituloPosicao">Zagueiros</h3>
-          <div class="row listaJogadores" id="infoZagueiro"></div>
-        </section>
-        <section class="column lateriasDireitos">
-          <h3 class="tituloPosicao">Laterais Direito</h3>
-          <div class="row listaJogadores" id="infoLateralDireito"></div>
-        </section>
-        <section class="column lateraisEsquerdos">
-          <h3 class="tituloPosicao">Laterias Esquerdos</h3>
-          <div class="row listaJogadores" id="infoLateralEsquerdo"></div>
-        </section>
-        <section class="column volantes">
-          <h3 class="tituloPosicao">Volantes</h3>
-          <div class="row listaJogadores" id="infoVolante"></div>
-        </section>
-        <section class="column meias">
-          <h3 class="tituloPosicao">Meio-Campos</h3>
-          <div class="row listaJogadores" id="infoMeia"></div>
-        </section>
-        <section class="column atacantes">
-          <h3 class="tituloPosicao">Atacantes</h3>
-          <div class="row listaJogadores" id="infoAtacante"></div>
-        </section>
+        <div class="row containerVideoELetra">
+          <iframe
+            width="420"
+            height="315"
+            src="https://www.youtube.com/embed/aE0pQ6ckzkQ?si=8RORuvS1CdFYVw07"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Oh, meu Mengão<br />
+
+            Eu gosto de você<br />
+            Quero cantar ao mundo inteiro<br />
+            A alegria de ser Rubro-Negro<br />
+            Conte comigo, Mengão Acima de tudo Rubro-Negro
+          </p>
+        </div>
       </section>
     </main>
-
     <footer class="bgFooter">
       <div class="column footer">
         <div class="column containerFooter">
@@ -217,6 +183,5 @@
         </div>
       </div>
     </footer>
-    <script src="../JS/main.js"></script>
   </body>
 </html>
