Finalizado as paginas, falta fazer o responsivo e  refatorar

--- a/Assets/HTML/cantosTorcida.html
+++ b/Assets/HTML/cantosTorcida.html
@@ -70,14 +70,12 @@
     </div>
     <main class="container">
       <section class="column cantoTorcida">
-        <h2 class="sectionTittle">Oh Meu Mengão!</h2>
+        <h2 class="sectionTittle">Oh Meu Mengão</h2>
         <br />
         <div class="row containerVideoELetra">
           <iframe
-            width="420"
-            height="315"
-            src="https://www.youtube.com/embed/aE0pQ6ckzkQ?si=8RORuvS1CdFYVw07"
-            title="YouTube video player"
+            src="https://www.youtube.com/embed/Cp656W0Tgw0?si=5leg7RpoP5GIpfi-"
+            title="Vídeo Oh Meu Mengão"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
@@ -90,6 +88,126 @@
             Quero cantar ao mundo inteiro<br />
             A alegria de ser Rubro-Negro<br />
             Conte comigo, Mengão Acima de tudo Rubro-Negro
+          </p>
+        </div>
+      </section>
+      <section class="column cantoTorcida">
+        <h2 class="sectionTittle">Vamos, Flamengo!</h2>
+        <br />
+        <div class="row containerVideoELetra">
+          <iframe
+            src="https://www.youtube.com/embed/Cp656W0Tgw0?si=5leg7RpoP5GIpfi-"
+            title="Vídeo Vamos, Flamengo!"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Vamos, Flamengo<br />
+
+            Vamos ser campeões<br />
+            Vamos, Flamengo<br />
+            <br />
+            Minha maior paixão<br />
+            Vamos, Flamengo <br />
+            E essa taça vamos conquistar!
+          </p>
+        </div>
+      </section>
+      <section class="column cantoTorcida">
+        <h2 class="sectionTittle">Em dezembro de 81</h2>
+        <br />
+        <div class="row containerVideoELetra">
+          <iframe
+            src="https://www.youtube.com/embed/8OBOLYU7GJM?si=R9OpEyM3BQGIq5qJ"
+            title="Vídeo Em Dezembro de 81"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Em dezembro de 81<br />
+
+            Botou os ingleses na roda<br />
+            3 a 0 no Liverpool<br />
+            Ficou marcado na história<br />
+            <br />
+            Que no Rio não tem outro igual <br />
+            Só o Flamengo é campeão mundial <br />
+            E agora seu povo <br />
+            Pede o mundo de novo <br />
+            <br />
+            Dá-lhe, dá-lhe, dá-lhe, mengo <br />
+            Pra cima deles, Flamengo! <br />
+            Dá-lhe, dá-lhe, dá-lhe, mengo <br />
+            Pra cima deles, Flamengo!
+          </p>
+        </div>
+      </section>
+      <section class="column cantoTorcida">
+        <h2 class="sectionTittle">Mengão do Meu Coração</h2>
+        <br />
+        <div class="row containerVideoELetra">
+          <iframe
+            src="https://www.youtube.com/embed/2SNGUwO9wnM?si=nhKVsNkmh5SdPhmt"
+            title="Vídeo Mengão do Meu Coração"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Mengo, estou sempre contigo<br />
+
+            Somos uma nação<br />
+            Não importa onde esteja<br />
+
+            Sempre estarei contigo<br />
+            Com o meu manto sagrado <br />
+            E a bandeira na mão <br />
+            O Maraca é nosso <br />
+            Vai começar a festa <br />
+            Dá-lhe, dá-lhe, dá-lhe ô [3x] <br />
+            Mengão do meu coração
+          </p>
+        </div>
+      </section>
+      <section class="column cantoTorcida">
+        <h2 class="sectionTittle">Vou Festejar</h2>
+        <br />
+        <div class="row containerVideoELetra">
+          <iframe
+            src="https://www.youtube.com/embed/NOJa7Z2n1-Q?si=ge87pQ2DBTfvuQHU"
+            title="Vídeo Vou Festejar"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Você pagou com traição<br />
+
+            A quem sempre lhe deu a mão<br />
+            Você pagou com traição<br />
+            <br />
+
+            Chora, não vou ligar<br />
+            Chegou a hora <br />
+            Vai me pagar <br />
+            <br />
+
+            É, o teu castigo <br />
+            Brigou comigo <br />
+            Sem ter porque <br />
+            Vou festejar, vou festejar <br />
+            O teu sofrer, o teu penar <br />
+            <br />
+            Você pagou com traição <br />
+            O Força Jovem só tem cuzão <br />
+            Você pagou com traição <br />
+            O Força Jovem só tem cuzão <br />
           </p>
         </div>
       </section>
