--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <nav>
           <ul>
             <li><a href="Assets/HTML/elenco.html">Elenco</a></li>
-            <li><a href="campeonatos.html">Campeonatos</a></li>
-            <li><a href="cantosTorcida.html">Cantos Torcida</a></li>
+            <li><a href="Assets/HTML/campeonatos.html">Campeonatos</a></li>
+            <li><a href="Assets/HTML/cantosTorcida.html">Cantos Torcida</a></li>
           </ul>
         </nav>
       </header>
