Finalizado o projeto base

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <div class="row proximoJogo">
           <div class="column times">
             <img
-              src="Assets/Imagens/Logo Nova Iguaçu.png"
-              alt="Logo Nova Iguacu"
+              src="Assets/Imagens/logoAtleticoGo.png"
+              alt="Logo Atlético-GO"
             />
-            <span>Nova Iguaçu</span>
+            <span>Atlético-GO</span>
           </div>
 
           <span>X</span>
@@ -97,10 +97,10 @@
           </div>
         </div>
         <div class="column infoJogo">
-          <span>Campeonato Carioca</span>
-          <span>Final - Jogo 1</span>
-          <span>Sábado - 30/03</span>
-          <span>Maracanã</span>
+          <span>Campeonato Brasileiro</span>
+          <span>1ª Rodada</span>
+          <span>Domingo - 14/04</span>
+          <span>Serra Dourada</span>
         </div>
       </section>
       <section class="column sectionTabelaCampeonatoBrasileiro">
